--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "gitbuild": "ng build --output-path docs --base-href cdd-project",
     "test": "ng test"
   },
   "private": true,
